apps/external-secrets-config/authentik-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentik
  annotations:
    argocd.argoproj.io/sync-wave: "0"
