apps/external-secrets-config/baserow-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: baserow
  annotations:
    argocd.argoproj.io/sync-wave: "0"
