apps/external-secrets-config/mailu-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mailu
  annotations:
    argocd.argoproj.io/sync-wave: "0"
