apps/external-secrets-config/nextcloud-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  annotations:
    argocd.argoproj.io/sync-wave: "0"
