apps/external-secrets-config/audiobookshelf-upload-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf-upload
  namespace: audiobookshelf
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    traefik.ingress.kubernetes.io/router.middlewares: audiobookshelf-audiobookshelf-upload-allowlist@kubernetescrd
spec:
  ingressClassName: my-traefik
  rules:
    - host: abs-upload.dklair.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  number: 80
  tls:
    - hosts:
        - abs-upload.dklair.io
      secretName: audiobookshelf-upload-tls
